[package]
name = "pocketh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"]}
ethereum-types = "0.13.1"
ethers = { version = "^0.6.0", default-features = false }
eyre = "0.6"
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.5.3"
tiny-keccak = { version = "2.0.2", default-features = false, features=["keccak"] }
